--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     </head>
     <body>
         <header id="main">
-        	<br>
-        	
-
+        	The Great 
+            <br>
+            <span id="colorDisplay">RGB</span> 
+            <br>
+            Color Game
         </header>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="script.js"></script>
