--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header id="main">
-        	The Great 
+        <h1>
+            The Great 
             <br>
             <span id="colorDisplay">RGB</span> 
             <br>
             Color Game
-        </header>
+        </h1>
+        
+        <div id="stripe">
+            <button id="reset">New Colors</button>
+            <span id="message"></span>
+        </div>        
+            <div id="container">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="script.js"></script>
     </body>
