--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <title>The Great Color Game</title>
     </head>
     <body>
+        <div style="color: white; background-color: steelblue; text-align: center; padding: 5px;"> Made by: Wael Taqia, Abdulrahmaan hussein</div>
         <h1>
             The Great 
             <br>
             <span id="colorDisplay">RGB</span> 
             <br>
             Color Game
-        </h1>
-        
+        </h1>        
         <div id="stripe">
             <button id="reset">New Colors</button>
             <span id="message"></span>
@@ -23,7 +24,7 @@
                 <div class="square"></div>
                 <div class="square"></div>
                 <div class="square"></div>
-            </div>
+            </div>           
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="script.js"></script>
     </body>
