--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <body>
         <div style="color: white; background-color: steelblue; text-align: center; padding: 5px;"> Made by: Wael Taqia, Abdulrahmaan hussein</div>
         <h1>
-            The Great 
+            Color Choosing Game
             <br>
             <span id="colorDisplay">RGB</span> 
-            <br>
-            Color Game
+            <br>            
         </h1>        
         <div id="stripe">
             <button id="reset">New Colors</button>
