--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>The Great Color Game</title>
+        <title>Color Choosing Game</title>
     </head>
     <body>
         <div style="color: white; background-color: steelblue; text-align: center; padding: 5px;"> Made by: Wael Taqia, Abdulrahmaan hussein</div>
         <h1>
             Color Choosing Game
-            
+
             <br>
             <span id="colorDisplay">RGB</span> 
             <br>            
